style(demo/select): fix overflow when selecting large options

--- a/apps/demo/src/assets/css/overrides.css
+++ b/apps/demo/src/assets/css/overrides.css
@@ -27,7 +27,8 @@ section:has(h3) {
 }
 
 .demo .section-content {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 1.5rem;
 }
 
